--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,27 @@ doctype html
 html
     head
         title R2-D2 Controller
+        meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+        style.
+            h1 {
+                text-align: center;
+            }
+            button {
+                display: block;
+                width: 300px;
+                height: 50px;
+                margin: 20px auto;
+                font-size: 1em;
+                color: white;
+                background-color: #1F3A93;
+                border-radius: 10px;
+                -webkit-appearance: none;
+                user-select: none;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                -o-user-select: none;
+            }
     body
         h1 R2-D2 Controller
         button#forward forward
